fix overlap of username

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,15 +1,15 @@
 .sign-out {
   
     position: absolute;
-    top: 0;
+    top: 0px;
     right: 0;
     padding-right: 2%;
-    margin-top: 3%;
+    margin-top: 0%;
 
 }
 
 .DashSearch {
-  top: 0;
+  top: 42px;
   left: -23%;
   right: -27%;
   position: absolute;
@@ -25,4 +25,7 @@ h1 {
 
 .user{
   /* margin-top: 65px; */
+  position: absolute;
+  right:53px;
+  top:-39px;
 }
